[gd_scene load_steps=6 format=3 uid="uid://cjpcojig6iwdw"]

[ext_resource type="Script" path="res://Objects/GameNode/gameNode.gd" id="1_xo6op"]
[ext_resource type="Script" path="res://Objects/GameNode/changeColor.gd" id="2_385qc"]
[ext_resource type="Script" path="res://Useful scripts/shapeVisualizer.gd" id="2_vqord"]
[ext_resource type="Script" path="res://Objects/GameNode/Select.gd" id="3_pq1u5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kh0e4"]
size = Vector2(40, 40)

[node name="GameNode" type="Node2D" node_paths=PackedStringArray("whiteCircle")]
script = ExtResource("1_xo6op")
whiteCircle = NodePath("ShapeVisualizer")

[node name="ShapeVisualizer" type="Node2D" parent="."]
script = ExtResource("2_vqord")
defaultVisiblity = false
shapeToDraw = 1
color = Color(0.776471, 0.776471, 0.776471, 1)
canvasLayer = 1
thickness = 3.0
radius = 33.0

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("2_385qc")

[node name="Shadow" type="ColorRect" parent="Control"]
layout_mode = 0
offset_right = 42.0
offset_bottom = 42.0
color = Color(0, 0, 0, 1)

[node name="ColorRect" type="ColorRect" parent="Control"]
modulate = Color(1.5, 1.5, 1.5, 1)
layout_mode = 0
offset_right = 37.0
offset_bottom = 37.0
color = Color(1, 0, 0.117647, 1)

[node name="ColorBox" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -12.0
offset_top = -12.0
offset_right = 12.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="SelectionArea2D" type="Area2D" parent="."]
script = ExtResource("3_pq1u5")

[node name="Area" type="CollisionShape2D" parent="SelectionArea2D"]
shape = SubResource("RectangleShape2D_kh0e4")
debug_color = Color(0, 0, 0, 0.368627)

[connection signal="addColorToDisplay" from="." to="Control" method="updateColorDisplay"]
[connection signal="changeNodeColor" from="." to="Control" method="changeColor"]
[connection signal="area_entered" from="SelectionArea2D" to="SelectionArea2D" method="areaEntered"]
[connection signal="area_exited" from="SelectionArea2D" to="SelectionArea2D" method="areaExited"]
[connection signal="selected" from="SelectionArea2D" to="." method="onSelected"]
